--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -9,7 +9,6 @@
     <title>El Paraiso - Habitaciones</title>
 </head>
 <body>
-    <header>
         <header>
             <a href="./index.html"><img src="./assets/images/Logo.png" alt=""></a>
             <h1>Hoteles el Paraiso</h1>
@@ -40,19 +39,18 @@
             </div>
         </main>
 
-        <footer>
-            <div id="contactos">
-                Contactenos a través de:
-                <div>
-                    <a href="https://www.facebook.com/"> <img src="./assets/images/facebook.png" alt=""></a>
-                    <a href="https://twitter.com/"><img src="./assets/images/twitter.png" alt=""></a>
-                    <a href="https://www.instagram.com/"><img src="./assets/images/instagram.png" alt=""></a>
-                    <span>Telefono: +549 - 12345678</span>
-                    <span>Correo: hotelelparaiso@gmail.com</span>
-                </div>
+        <footer clas="footer">
+            <p id="contactos">Contactenos a través de:</p>
+            <div>
+                <a href="https://www.facebook.com/"> <img src="./assets/images/facebook.png" alt="" class="footer__red"></a>
+                <a href="https://twitter.com/"><img src="./assets/images/twitter.png" alt="" class="footer__red"></a>
+                <a href="https://www.instagram.com/"><img src="./assets/images/instagram.png" alt="" class="footer__red"></a>  
             </div>
+            <div>
+                <span>Telefono: +549 - 12345678</span>
+                <span>Correo: hotelelparaiso@gmail.com</span>  
+            </div>            
         </footer>
-    </header>
     
 </body>
 </html>
