--- a/pages/restaurante.html
+++ b/pages/restaurante.html
@@ -137,17 +137,17 @@
         
     </main>
 
-    <footer>
-        <div id="contactos">
-            Contactenos a través de:
-            <div>
-                <a href="https://www.facebook.com/"> <img src="./assets/images/facebook.png" alt=""></a>
-                <a href="https://twitter.com/"><img src="./assets/images/twitter.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="./assets/images/instagram.png" alt=""></a>
-                <span>Telefono: +549 - 12345678</span>
-                <span>Correo: hotelelparaiso@gmail.com</span>
-            </div>
+    <footer clas="footer">
+        <p id="contactos">Contactenos a través de:</p>
+        <div>
+            <a href="https://www.facebook.com/"> <img src="./assets/images/facebook.png" alt="" class="footer__red"></a>
+            <a href="https://twitter.com/"><img src="./assets/images/twitter.png" alt="" class="footer__red"></a>
+            <a href="https://www.instagram.com/"><img src="./assets/images/instagram.png" alt="" class="footer__red"></a>  
         </div>
+        <div>
+            <span>Telefono: +549 - 12345678</span>
+            <span>Correo: hotelelparaiso@gmail.com</span>  
+        </div>            
     </footer>
 </body>
 </html>
