--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../assets/favicon.png">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>El Paraiso - Actividades</title>
 </head>
 
 
 <body>
 
-    <header>
-        <a href="./index.html"><img src="./assets/images/Logo.png" alt=""></a>
-        <h1>Hoteles el Paraiso</h1>
+    <header class="header">
+        <a href="../index.html"><img src="../assets/images/Logo.png" alt="" class="header__logo"></a>
         <ul>
-            <li><a href="../index.html">INICIO</a></li>
-            <li><a href="../pages/habitaciones.html">HABITACIONES</a></li>
-            <li><a href="../pages/restaurante.html">RESTAURANTE</a></li>
-            <li><a href="../pages/actividades.html">ACTIVIDADES</a></li>
-            <li><a href="#contactos">CONTÁCTANOS</a></li>
-            <li><a href="../pages/reserva.html">RESERVA</a></li>
+            <li><a class="header__link" href="../index.html">INICIO</a></li>
+            <li><a class="header__link" href="../pages/habitaciones.html">HABITACIONES</a></li>
+            <li><a class="header__link" href="../pages/restaurante.html">RESTAURANTE</a></li>
+            <li><a class="header__link" href="../pages/actividades.html">ACTIVIDADES</a></li>
+            <li><a class="header__link" href="#contactos">CONTÁCTANOS</a></li>
+            <li><a class="header__link" href="../pages/reserva.html">RESERVA</a></li>
         </ul>
     </header>
 
@@ -89,14 +88,12 @@
     <footer clas="footer">
         <p id="contactos">Contactenos a través de:</p>
         <div>
-            <a href="https://www.facebook.com/"> <img src="./assets/images/facebook.png" alt="" class="footer__red"></a>
-            <a href="https://twitter.com/"><img src="./assets/images/twitter.png" alt="" class="footer__red"></a>
-            <a href="https://www.instagram.com/"><img src="./assets/images/instagram.png" alt="" class="footer__red"></a>  
+            <a href="https://www.facebook.com/"> <img src="../assets/images/facebook.png" alt="" class="footer__red"></a>
+            <a href="https://twitter.com/"><img src="../assets/images/twitter.png" alt="" class="footer__red"></a>
+            <a href="https://www.instagram.com/"><img src="../assets/images/instagram.png" alt="" class="footer__red"></a>  
         </div>
-        <div>
-            <span>Telefono: +549 - 12345678</span>
-            <span>Correo: hotelelparaiso@gmail.com</span>  
-        </div>            
+            <div>Telefono: +549 - 12345678</div>
+            <div>Correo: hotelelparaiso@gmail.com</div>             
     </footer>
 </body>
 </html>
