--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="main__section1">
             <h1 class="main__section1__titulo">HOTELES EL PARAISO</h1>
             <p class="main__section1__eslogan">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, impedit.</p>
-            <a class="main__section1__reserva" href="./pages/reserva.html">RESERVA</a>
+            <a class="main__section1__reserva" href="./pages/reserva.html">RESERVA AQUI</a>
         </section>
         <div>
             <video class="main__video" src="./assets/video/video_background.mp4" autoplay muted loop></video>
