--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
 </head>
 
 <body>
-    <header class="header">
-        <a href="./index.html"><img src="./assets/images/Logo.png" alt="" class="header__logo"></a>
-        <ul>
-            <li><a class="header__link" href="./index.html">INICIO</a></li>
-            <li><a class="header__link" href="./pages/habitaciones.html">HABITACIONES</a></li>
-            <li><a class="header__link" href="./pages/restaurante.html">RESTAURANTE</a></li>
-            <li><a class="header__link" href="./pages/actividades.html">ACTIVIDADES</a></li>
-            <li><a class="header__link" href="#contactos">CONTÁCTANOS</a></li>
-            <li><a class="header__link" href="./pages/reserva.html">RESERVA</a></li>
-        </ul>
+    <header>
+        <nav>
+            <a href="" class="enlace">
+                <img src="./assets/images/Logo.png" alt="" class="logo">
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+            
+            <ul>
+                <li><a class="active" href="./index.html">INICIO</a></li>
+                <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
+                <li><a href="./pages/restaurante.html">RESTAURANTE</a></li>
+                <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
+                <li><a href="#contactos">CONTÁCTANOS</a></li>
+                <li><a href="./pages/reserva.html">RESERVA</a></li>
+            </ul>
+        </nav>
     </header>
     
 
