--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -14,7 +14,7 @@
     <title>El Paraiso - Habitaciones</title>
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <a href="../index.html"><img src="../assets/images/Logo.png" alt="" class="header__logo"></a>
         <ul>
             <li><a class="header__link" href="../index.html">INICIO</a></li>
@@ -24,7 +24,7 @@
             <li><a class="header__link" href="#contactos">CONTÁCTANOS</a></li>
             <li><a class="header__link" href="../pages/reserva.html">RESERVA</a></li>
         </ul>
-    </header>
+    </header> -->
 
         <main>
             
