--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap" rel="stylesheet">
@@ -43,7 +44,7 @@
             <h1 class="main__section1__titulo">HOTELES EL PARAISO</h1>
             <p class="main__section1__eslogan">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, impedit.</p>
             <a class="main__section1__reserva" href="./pages/reserva.html">RESERVA AQUI</a>
-        </section>
+        </section class="section__video">
         <div>
             <video class="main__video" src="./assets/video/video_background.mp4" autoplay muted loop></video>
          </div>
