--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -8,23 +8,33 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/favicon.png">
     <link rel="stylesheet" href="../css/styles.css">
     <title>El Paraiso - Habitaciones</title>
 </head>
 <body>
-    <!-- <header class="header">
-        <a href="../index.html"><img src="../assets/images/Logo.png" alt="" class="header__logo"></a>
-        <ul>
-            <li><a class="header__link" href="../index.html">INICIO</a></li>
-            <li><a class="header__link" href="../pages/habitaciones.html">HABITACIONES</a></li>
-            <li><a class="header__link" href="../pages/restaurante.html">RESTAURANTE</a></li>
-            <li><a class="header__link" href="../pages/actividades.html">ACTIVIDADES</a></li>
-            <li><a class="header__link" href="#contactos">CONTÁCTANOS</a></li>
-            <li><a class="header__link" href="../pages/reserva.html">RESERVA</a></li>
-        </ul>
-    </header> -->
+    <header>
+        <nav>
+            <a href="" class="enlace">
+                <img src="../assets/images/Logo.png" alt="" class="logo">
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+            
+            <ul>
+                <li><a class="active" href="../index.html">INICIO</a></li>
+                <li><a href="./habitaciones.html">HABITACIONES</a></li>
+                <li><a href="./pages/restaurante.html">RESTAURANTE</a></li>
+                <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
+                <li><a href="#contactos">CONTÁCTANOS</a></li>
+                <li><a href="./pages/reserva.html">RESERVA</a></li>
+            </ul>
+        </nav>
+    </header>
 
         <main>
             
