--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/favicon.png">
+    <link rel="shortcut icon" href="../assets/favicon.png">
     <link rel="stylesheet" href="../css/styles.css">
     <title>El Paraiso - Habitaciones</title>
 </head>
@@ -25,18 +25,18 @@
                 <i class="fas fa-bars"></i>
             </label>
             
-            <ul>
+            <ul class="header">
                 <li><a class="active" href="../index.html">INICIO</a></li>
                 <li><a href="./habitaciones.html">HABITACIONES</a></li>
-                <li><a href="./pages/restaurante.html">RESTAURANTE</a></li>
-                <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
-                <li><a href="#contactos">CONTÁCTANOS</a></li>
-                <li><a href="./pages/reserva.html">RESERVA</a></li>
+                <li><a href="./restaurante.html">RESTAURANTE</a></li>
+                <li><a href="./actividades.html">ACTIVIDADES</a></li>
+                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li><a href="./reserva.html">RESERVA</a></li>
             </ul>
         </nav>
     </header>
 
-        <main>
+        <main id="main__con__section">
             
             <div class="main_fondo">
                 <section class="habit__section1" data-aos="zoom-in">
