--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 <i class="fas fa-bars"></i>
             </label>
             
-            <ul>
+            <ul class="header">
                 <li><a class="active" href="./index.html">INICIO</a></li>
                 <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./pages/restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
-                <li><a href="#contactos">CONTÁCTANOS</a></li>
+                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./pages/reserva.html">RESERVA</a></li>
             </ul>
         </nav>
     </header>
     
 
-    <main>
+    <main id="main__con__section">
         <!-- SECCION 1 -->
         <section class="main__section1">
             <h1 class="main__section1__titulo">HOTELES EL PARAISO</h1>
