--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -64,7 +64,7 @@
                         <li>Bar con DJ</li>
                     </ul>
                     <div class="link">
-                        <a href="#">Reseva ahora</a>
+                        <a href="./reserva.html">Reseva ahora</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                         <li>Gimnasio abierto las 24 horas</li>
                     </ul>
                     <div class="link">
-                        <a href="#">Reseva ahora</a>
+                        <a href="./reserva.html">Reseva ahora</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                             <li>Profesor de surfeo y alquiler de tablas para surfear gratuitas</li>
                         </ul>
                     <div class="link">
-                        <a href="#">Reseva ahora</a>
+                        <a href="./reserva.html">Reseva ahora</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                         <li>Observatorio todas las noches</li>
                     </ul>
                     <div class="link">
-                        <a href="#">Reseva ahora</a>
+                        <a href="./reserva.html">Reseva ahora</a>
                     </div>
                 </div>
             </div>
