--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="" class="enlace">
+            <a href="../index.html" class="enlace">
                 <img src="../assets/images/Logo.png" alt="" class="logo">
             </a>
             <input type="checkbox" id="check">
@@ -30,7 +30,7 @@
                 <li><a href="./habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./actividades.html">ACTIVIDADES</a></li>
-                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li id="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./reserva.html">RESERVA</a></li>
             </ul>
         </nav>
