--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav>
-            <a href="" class="enlace">
+            <a href="./index.html" class="enlace">
                 <img src="./assets/images/Logo.png" alt="" class="logo">
             </a>
             <input type="checkbox" id="check">
@@ -31,7 +31,7 @@
                 <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./pages/restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
-                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li id="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./pages/reserva.html">RESERVA</a></li>
             </ul>
         </nav>
