--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -33,17 +33,17 @@
                 <li><a href="./habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./actividades.html">ACTIVIDADES</a></li>
-                <li id="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./reserva.html">RESERVA</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main__act">
+    <main id="main__act">
         <section id="section1__descripcion">
             <div class="sombreado">
-                <h1 class="titulo__act">HABITACIONES</h1>
-                <p class="slogan__act">Contamos con una amplia gama de habitaciones para que puedas disfrutar al máximo tu estadia</p>
+                <h1 class="titulo__act">ACTIVIDADES</h1>
+                <p class="slogan__act">Si quieres tener una experiencia mucho más inmersiva te recomendamos nuestra guia de actividaes. Además tenemos actividades exclusivas para cada tipo de sucursal</p>
             </div>
         </section>
         
