--- a/pages/restaurante.html
+++ b/pages/restaurante.html
@@ -32,7 +32,7 @@
                 <li><a href="./habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./actividades.html">ACTIVIDADES</a></li>
-                <li id="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./reserva.html">RESERVA</a></li>
             </ul>
         </nav>
@@ -43,13 +43,13 @@
       <section id="section1__menu">
         <ul class="menu">
           <li id="opcion1"><a href="#opcion1">Desayuno y merienda</a>
-          <ul>
-            <li><a href="#slide1">Infusiones</a></li>
-            <li><a href="#slide2">Lacteos</a></li>
-            <li><a href="#slide3">Masas</a></li>
-            <li><a href="#slide4">Fiambres</a></li>
-            <li><a href="#slide5">Frutas de temporada</a></li>        
-          </ul>
+            <ul>
+              <li><a href="#slide1">Infusiones</a></li>
+              <li><a href="#slide2">Lacteos</a></li>
+              <li><a href="#slide3">Masas</a></li>
+              <li><a href="#slide4">Fiambres</a></li>
+              <li><a href="#slide5">Frutas de temporada</a></li>        
+            </ul>
           </li>
           
           <li id="opcion2"><a href="#opcion2">Almuerzo y cena</a>
@@ -103,7 +103,7 @@
   
   
   
-      <section class="slider-container">
+      <section id="slider-container">
         <div class="slider-content" id="slide1">
           <p id="texto">INGREDIENTES</p>
         </div>
