--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -25,18 +25,18 @@
                 <i class="fas fa-bars"></i>
             </label>
             
-            <ul class="header">
+            <ul>
                 <li><a class="active" href="../index.html">INICIO</a></li>
                 <li><a href="./habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./actividades.html">ACTIVIDADES</a></li>
-                <li id="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./reserva.html">RESERVA</a></li>
             </ul>
         </nav>
     </header>
 
-        <main id="main__con__section">
+        <main id="main__habitaciones">
             
             <div class="main_fondo">
                 <section class="habit__section1" data-aos="zoom-in">
