--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./pages/restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
-                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li><a class="desactivar" href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./pages/reserva.html">RESERVA</a></li>
             </ul>
         </nav>
