--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -33,7 +33,7 @@
                 <li><a href="./habitaciones.html">HABITACIONES</a></li>
                 <li><a href="./restaurante.html">RESTAURANTE</a></li>
                 <li><a href="./actividades.html">ACTIVIDADES</a></li>
-                <li class="desactivar"><a href="#contactos">CONTÁCTANOS</a></li>
+                <li><a class="desactivar" href="#contactos">CONTÁCTANOS</a></li>
                 <li><a href="./reserva.html">RESERVA</a></li>
             </ul>
         </nav>
