--- a/pages/restaurante.html
+++ b/pages/restaurante.html
@@ -185,7 +185,8 @@
         <div class="slider-content" id="slide27">
           <p id="texto">INGREDIENTES</p>
         </div>
-      
+        <h1>MENU</h1>
+        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde a, enim magnam cumque deleniti ratione nostrum laboriosam quae doloribus quidem porro praesentium, odit natus! Ullam dolorem ducimus veritatis neque blanditiis.</article>
       </section>
   
     </main>
