--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -41,7 +41,7 @@
     <main id="main__reserva">
 
         <form action="" method="get" class="formulario">
-            <h4>Formulario reserva</h4>
+            <h4>Reserva aquí</h4>
             <div>
                 <label for="Nombre">Ingrese su nombre/s
                     <input type="text" name="Nombre" value="" id="Nombre" required class="ingresar">  
