--- a/pages/restaurante.html
+++ b/pages/restaurante.html
@@ -105,88 +105,88 @@
   
       <section id="slider-container">
         <div class="slider-content" id="slide1">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide2">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide3">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide4">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide5">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide6">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide7">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide8">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide9">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide10">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide11">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide12">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide13">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide14">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide15">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide16">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide17">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide18">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide19">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide20">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide21">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide22">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide23">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide24">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide25">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
         <div class="slider-content" id="slide26">
-          <p id="texto">INGREDIENTES </p>
+          <p>INGREDIENTES </p>
         </div>
         <div class="slider-content" id="slide27">
-          <p id="texto">INGREDIENTES</p>
+          <p>INGREDIENTES</p>
         </div>
-        <h1>MENU</h1>
-        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde a, enim magnam cumque deleniti ratione nostrum laboriosam quae doloribus quidem porro praesentium, odit natus! Ullam dolorem ducimus veritatis neque blanditiis.</article>
+        <h1 class="menu__titulo">MENÚ</h1>
+        <p class="menu__slogan">Todas los restaurantes de nuestros hoteles tienen una amplia variedad, para que te des un gusto en cualquier momento del día </p>
       </section>
   
     </main>
